# besace

./: .gitignore  LICENSE  README.md  docker-compose.yaml  playwright.config.ts
.github/: dependabot.yml
.github/workflows/: publish.yaml  test.yaml
api/: .dockerignore  Dockerfile  Makefile  dictionnary.txt  main.py  pyproject.toml
api/tests/: test_main.py
browser-tests/: home.spec.ts  package-lock.json  package.json  playwright.config.ts
config/: apache2.conf  nginx.conf
hooks/: post-finish  pre-create  pre-finish
html/: index.css  index.html  index.mjs
thumbnailer/: Dockerfile  Makefile  pyproject.toml  thumbnailer.py
thumbnailer/tests/: test_thumbnailer.py
