[project]
authors = [
    {name = "Mathieu Leplatre", email = "mathieu@leplat.re"},
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "fastapi<1.0,>=0.111",
    "filelock>=3.19.1",
    "uvicorn[standard]<1.0,>=0.29",
]
name = "api"
version = "0.1.0"
description = ""
readme = "README.md"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-coverage>=0.0",
    "ruff>=0.12.9",
]
