[project]
authors = [
    {name = "Mathieu Leplatre", email = "mathieu@leplat.re"},
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "fastapi>=0.138.0,<1.0",
    "filelock>=3.29.4",
    "uvicorn[standard]>=0.48.0,<1.0",
]
name = "api"
version = "0.1.0"
description = ""
readme = "README.md"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-coverage>=0.0",
    "ruff>=0.15.18",
]
