[tool.poetry]
name = "thumbnailer"
version = "0.1.0"
description = ""
authors = ["Mathieu Leplatre <mathieu@leplat.re>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
inotify-simple = "^1.3.5"
watchdog = "^4.0.1"
pillow = "^10.3.0"
moviepy = "^1.0.3"
ffmpeg-python = "^0.2.0"
pymupdf = "^1.24.5"
pillow-heif = "^0.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
